--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -12,14 +12,15 @@
     "axios": "^1.12.2",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "swiper": "^12.0.2"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pikaday": "^1.7.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.2.3",
