--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -14,7 +14,8 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
