--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
