--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/web-bluetooth": "^0.0.21",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "next": "15.5.4",
