--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@mui/x-charts": "^8.20.0",
     "@types/web-bluetooth": "^0.0.21",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
