--- a/vital_sphere/package.json
+++ b/vital_sphere/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "tunnel": "concurrently \"next dev --turbopack\" \"node dist-ngrok/ngrok.js\"",
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
@@ -13,10 +14,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@mui/x-charts": "^8.20.0",
+    "@ngrok/ngrok": "^1.7.0",
     "@types/web-bluetooth": "^0.0.21",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
-    "next": "15.5.4",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
