--- a/fastapi/.env
+++ b/fastapi/.env
@@ -1,3 +1,5 @@
 AUTH_SECRET_KEY=7AA66A3363E9362194C7BD18A7FB9
 AUTH_ALGORITHM=HS256
 API_URL=http://localhost:3000
+POSTGRESQL_URL=postgresql+psycopg://postgres:109789090054HG911@localhost/vital_sphere
+SQLITE_URL=sqlite:///athlete_monitoring.db
